# v1.2.1 - 2025-12-27
- Fixed a race condition when multi-process trying to create the same shared memory segment
- Added release workflow

# v1.2.0 - 2025-12-19
- **BREAKING CHANGE**: Refactored `reserved_info` from struct to packed uint64_t for guaranteed lock-free atomics
  - Uses 48-bit index (supports 2^48 = 281 trillion iterations) and 16-bit size
  - `std::atomic<reserved_info>` is now always lock-free on all platforms
  - Reserve size limit of 65,535 (2^16 - 1) when using `read_last()` - see documentation
- Added `HEADER_SIZE` constant to replace magic number 64 in shared memory layout
- Added element size validation in shared memory to prevent type mismatches between processes
- Updated README with vcpkg installation instructions
- Updated README with lock-free implementation details and constraints documentation

# v1.1.2 - 2025-11-14
- Add alias target to provide the same slick::slick_queue name during build time

# v1.1.1 - 2025-11-14
- Updated CMakeLists.txt and added cmake config for vcpkg integration.
- Changed version number to three digits.

# v1.1.0.2 - 2025-10-21
- Changed include folder from include/slick_queue to include/slick
- Changed slick_queue.h to queue.h
- Changed test framework from catch2 to googletest

# v1.1.0.1 - 2025-10-21
- Fixed Linux implementation to read size from shared memory when opening existing segments
- Added size validation when opening existing shared memory with size mismatch

# v1.1.0.0 - 2025-10-04
- Fixed size calculation in shared memory mapping to use reserved_info struct
- Added server-client shared memory test case
- Added GitHub CI workflow for automated testing across Ubuntu, Windows, and macOS
- Added CI status badge to README
- Added CTest integration for automated test discovery
- Added read() overload with atomic cursor for work-stealing/load-balancing patterns
- Added work-stealing test cases for both in-process and shared memory modes